--- a/News_Aggregator_Classification.ipynb
+++ b/News_Aggregator_Classification.ipynb
@@ -1,6 +1,7 @@
 {
  "cells": [
   {
+   "attachments": {},
    "cell_type": "markdown",
    "id": "b0b09f83",
    "metadata": {},
@@ -9,6 +10,7 @@
    ]
   },
   {
+   "attachments": {},
    "cell_type": "markdown",
    "id": "8586cd9b",
    "metadata": {},
@@ -17,6 +19,7 @@
    ]
   },
   {
+   "attachments": {},
    "cell_type": "markdown",
    "id": "fce2ddee",
    "metadata": {},
@@ -25,6 +28,7 @@
    ]
   },
   {
+   "attachments": {},
    "cell_type": "markdown",
    "id": "4329d3eb",
    "metadata": {},
@@ -33,6 +37,7 @@
    ]
   },
   {
+   "attachments": {},
    "cell_type": "markdown",
    "id": "44422a48",
    "metadata": {},
@@ -40,26 +45,35 @@
     "The columns included in this dataset are: </br>\n",
     "\n",
     "ID : the numeric ID of the article </br>\n",
+    "\n",
     "TITLE : the headline of the article </br>\n",
+    "\n",
     "URL : the URL of the article </br>\n",
+    "\n",
     "PUBLISHER : the publisher of the article </br>\n",
+    "\n",
     "CATEGORY : the category of the news item; one of: </br>\n",
     "-- b : business </br>\n",
     "-- t : science and technology </br>\n",
     "-- e : entertainment </br>\n",
     "-- m : health </br>\n",
+    "\n",
     "STORY : alphanumeric ID of the news story that the article discusses </br>\n",
+    "\n",
     "HOSTNAME : hostname where the article was posted </br>\n",
+    "\n",
     "TIMESTAMP : approximate timestamp of the article's publication"
    ]
   },
   {
+   "attachments": {},
    "cell_type": "markdown",
    "id": "bf42f8e4",
    "metadata": {},
    "source": [
     "1. Publication Dataset: \n",
-    "Lichman, M. (2013). UCI Machine Learning Repository [https://archive.ics.uci.edu/ml/datasets/News+Aggregator]. Irvine, CA: University of California, School of Information and Computer Science.\n",
+    "Lichman, M. (2013). UCI Machine Learning Repository [https://archive.ics.uci.edu/ml/datasets/News+Aggregator]. </br> \n",
+    "Irvine, CA: University of California, School of Information and Computer Science.\n",
     "\n",
     "2. Kaggle Dataset: \n",
     "https://www.kaggle.com/datasets/uciml/news-aggregator-dataset"
@@ -85,6 +99,7 @@
    ]
   },
   {
+   "attachments": {},
    "cell_type": "markdown",
    "id": "a916e854",
    "metadata": {},
@@ -467,6 +482,7 @@
    ]
   },
   {
+   "attachments": {},
    "cell_type": "markdown",
    "id": "d2e4caf7",
    "metadata": {},
@@ -599,6 +615,7 @@
    ]
   },
   {
+   "attachments": {},
    "cell_type": "markdown",
    "id": "27bb3708",
    "metadata": {},
@@ -767,6 +784,7 @@
    ]
   },
   {
+   "attachments": {},
    "cell_type": "markdown",
    "id": "cbc440ab",
    "metadata": {},
@@ -859,6 +877,7 @@
    ]
   },
   {
+   "attachments": {},
    "cell_type": "markdown",
    "id": "8bbf9fdd",
    "metadata": {},
@@ -976,6 +995,7 @@
    ]
   },
   {
+   "attachments": {},
    "cell_type": "markdown",
    "id": "189abc6b",
    "metadata": {},
@@ -1088,6 +1108,7 @@
    ]
   },
   {
+   "attachments": {},
    "cell_type": "markdown",
    "id": "0c8133eb",
    "metadata": {},
