--- a/News_Aggregator_Classification.ipynb
+++ b/News_Aggregator_Classification.ipynb
@@ -53,9 +53,13 @@
     "PUBLISHER : the publisher of the article </br>\n",
     "\n",
     "CATEGORY : the category of the news item; one of: </br>\n",
+    "\n",
     "-- b : business </br>\n",
+    "\n",
     "-- t : science and technology </br>\n",
+    "\n",
     "-- e : entertainment </br>\n",
+    "\n",
     "-- m : health </br>\n",
     "\n",
     "STORY : alphanumeric ID of the news story that the article discusses </br>\n",
@@ -72,7 +76,7 @@
    "metadata": {},
    "source": [
     "1. Publication Dataset: \n",
-    "Lichman, M. (2013). UCI Machine Learning Repository [https://archive.ics.uci.edu/ml/datasets/News+Aggregator]. </br> \n",
+    "Lichman, M. (2013). UCI Machine Learning Repository https://archive.ics.uci.edu/ml/datasets/News+Aggregator. </br> \n",
     "Irvine, CA: University of California, School of Information and Computer Science.\n",
     "\n",
     "2. Kaggle Dataset: \n",
