--- a/News_Aggregator_Classification.ipynb
+++ b/News_Aggregator_Classification.ipynb
@@ -99,7 +99,12 @@
     "import warnings\n",
     "warnings.filterwarnings(\"ignore\")\n",
     "from sklearn.preprocessing import LabelEncoder\n",
-    "from keras.utils.np_utils import to_categorical"
+    "from keras.utils.np_utils import to_categorical\n",
+    "from transformers import AutoTokenizer\n",
+    "from transformers import TFAutoModelForSequenceClassification\n",
+    "from tensorflow.keras.optimizers.schedules import PolynomialDecay\n",
+    "from tensorflow.keras.optimizers import Adam\n",
+    "from tensorflow.keras.losses import SparseCategoricalCrossentropy"
    ]
   },
   {
@@ -803,8 +808,6 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "from transformers import AutoTokenizer\n",
-    "\n",
     "tokenizer = AutoTokenizer.from_pretrained('distilbert-base-uncased')"
    ]
   },
@@ -908,8 +911,6 @@
     }
    ],
    "source": [
-    "from transformers import TFAutoModelForSequenceClassification\n",
-    "\n",
     "model = TFAutoModelForSequenceClassification.from_pretrained(\n",
     "        \"distilbert-base-uncased\",num_labels=4)"
    ]
@@ -921,8 +922,6 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "from tensorflow.keras.optimizers.schedules import PolynomialDecay\n",
-    "\n",
     "num_epochs = 1\n",
     "\n",
     "# The number of training steps is the number of samples in the dataset, divided by the batch size then multiplied\n",
@@ -959,9 +958,6 @@
     }
    ],
    "source": [
-    "from tensorflow.keras.optimizers import Adam\n",
-    "from tensorflow.keras.losses import SparseCategoricalCrossentropy\n",
-    "\n",
     "opt = Adam(learning_rate=lr_scheduler)\n",
     "\n",
     "loss = tf.keras.losses.SparseCategoricalCrossentropy(from_logits=True)\n",
