--- a/notebook/01_data_ingestion.ipynb
+++ b/notebook/01_data_ingestion.ipynb
@@ -17,7 +17,7 @@
     {
      "data": {
       "text/plain": [
-       "'c:\\\\Users\\\\Vincent\\\\Desktop\\\\text-classification-Trials\\\\notebook'"
+       "'c:\\\\Users\\\\Vincent\\\\Documents\\\\GitHub\\\\Text-Classification\\\\notebook'"
       ]
      },
      "execution_count": 2,
@@ -46,7 +46,7 @@
     {
      "data": {
       "text/plain": [
-       "'c:\\\\Users\\\\Vincent\\\\Desktop\\\\text-classification-Trials'"
+       "'c:\\\\Users\\\\Vincent\\\\Documents\\\\GitHub\\\\Text-Classification'"
       ]
      },
      "execution_count": 4,
@@ -232,14 +232,16 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "[2024-07-15 09:49:04,364: INFO: common: yaml file: config\\config.yaml loaded successfully]\n",
-      "[2024-07-15 09:49:04,372: INFO: common: created directory at: output]\n",
-      "[2024-07-15 09:49:04,373: INFO: common: created directory at: output/data_ingestion]\n",
-      "[2024-07-15 09:49:04,374: INFO: 47003388: Data Ingestion]\n",
-      "[2024-07-15 09:49:04,375: INFO: 47003388: Reading the data]\n",
-      "[2024-07-15 09:49:06,150: INFO: 47003388: Splitting the data into x and y]\n",
-      "[2024-07-15 09:49:06,150: INFO: 47003388: Applying train_test_split on the data]\n",
-      "[2024-07-15 09:49:06,150: INFO: 47003388: Saving the data]\n"
+      "[2024-07-15 19:37:03,026: INFO: common: yaml file: config\\config.yaml loaded successfully]\n",
+      "[2024-07-15 19:37:03,027: INFO: common: created directory at: output]\n",
+      "[2024-07-15 19:37:03,028: INFO: common: created directory at: output/data_ingestion]\n",
+      "[2024-07-15 19:37:03,029: INFO: 3567442147: Data Ingestion]\n",
+      "[2024-07-15 19:37:03,030: INFO: 3567442147: Reading the data]\n",
+      "[2024-07-15 19:37:04,442: INFO: 3567442147: Sampling 5000 rows for each category at random]\n",
+      "[2024-07-15 19:37:04,811: INFO: 3567442147: Splitting the data into X and y]\n",
+      "[2024-07-15 19:37:04,811: INFO: 3567442147: Train test split initiated to create Training, Validation and Test data]\n",
+      "[2024-07-15 19:37:04,827: INFO: 3567442147: Saving the data]\n",
+      "[2024-07-15 19:37:04,878: INFO: 3567442147: Ingestion of the data is completed]\n"
      ]
     }
    ],
