--- a/notebook/02_data_transformation.ipynb
+++ b/notebook/02_data_transformation.ipynb
@@ -17,7 +17,7 @@
     {
      "data": {
       "text/plain": [
-       "'c:\\\\Users\\\\Vincent\\\\Desktop\\\\text-classification-Trials\\\\notebook'"
+       "'c:\\\\Users\\\\Vincent\\\\Documents\\\\GitHub\\\\Text-Classification\\\\notebook'"
       ]
      },
      "execution_count": 2,
@@ -46,7 +46,7 @@
     {
      "data": {
       "text/plain": [
-       "'c:\\\\Users\\\\Vincent\\\\Desktop\\\\text-classification-Trials'"
+       "'c:\\\\Users\\\\Vincent\\\\Documents\\\\GitHub\\\\Text-Classification'"
       ]
      },
      "execution_count": 4,
@@ -242,15 +242,15 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "[2024-07-15 10:14:29,025: INFO: common: yaml file: config\\config.yaml loaded successfully]\n",
-      "[2024-07-15 10:14:29,027: INFO: common: created directory at: output]\n",
-      "[2024-07-15 10:14:29,028: INFO: common: created directory at: output/data_transformation]\n",
-      "[2024-07-15 10:14:29,028: INFO: 1408085289: Loading tokenizer from pretrained model]\n",
-      "[2024-07-15 10:14:29,396: INFO: 1408085289: Saving tokenizer from pretrained model]\n",
-      "[2024-07-15 10:14:29,396: INFO: 1408085289: Reading in train, val and test text data]\n",
-      "[2024-07-15 10:14:29,502: INFO: 1408085289: Tokenzing the train, val and test text data]\n",
-      "[2024-07-15 10:14:30,260: INFO: 1408085289: Generating the train, val and test datasets.]\n",
-      "[2024-07-15 10:14:57,980: INFO: 1408085289: Saving the train, val and test datasets.]\n"
+      "[2024-07-15 19:37:33,042: INFO: common: yaml file: config\\config.yaml loaded successfully]\n",
+      "[2024-07-15 19:37:33,045: INFO: common: created directory at: output]\n",
+      "[2024-07-15 19:37:33,045: INFO: common: created directory at: output/data_transformation]\n",
+      "[2024-07-15 19:37:33,045: INFO: 1408085289: Loading tokenizer from pretrained model]\n",
+      "[2024-07-15 19:37:33,354: INFO: 1408085289: Saving tokenizer from pretrained model]\n",
+      "[2024-07-15 19:37:33,370: INFO: 1408085289: Reading in train, val and test text data]\n",
+      "[2024-07-15 19:37:33,466: INFO: 1408085289: Tokenzing the train, val and test text data]\n",
+      "[2024-07-15 19:37:33,906: INFO: 1408085289: Generating the train, val and test datasets.]\n",
+      "[2024-07-15 19:37:36,938: INFO: 1408085289: Saving the train, val and test datasets.]\n"
      ]
     }
    ],
