--- a/notebook/04_model_evaluation.ipynb
+++ b/notebook/04_model_evaluation.ipynb
@@ -17,7 +17,7 @@
     {
      "data": {
       "text/plain": [
-       "'c:\\\\Users\\\\Vincent\\\\Desktop\\\\text-classification-Trials\\\\notebook'"
+       "'c:\\\\Users\\\\Vincent\\\\Documents\\\\GitHub\\\\Text-Classification\\\\notebook'"
       ]
      },
      "execution_count": 2,
@@ -46,7 +46,7 @@
     {
      "data": {
       "text/plain": [
-       "'c:\\\\Users\\\\Vincent\\\\Desktop\\\\text-classification-Trials'"
+       "'c:\\\\Users\\\\Vincent\\\\Documents\\\\GitHub\\\\Text-Classification'"
       ]
      },
      "execution_count": 4,
@@ -213,9 +213,9 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "[2024-07-15 11:41:17,192: INFO: common: yaml file: config\\config.yaml loaded successfully]\n",
-      "[2024-07-15 11:41:17,192: INFO: common: created directory at: output]\n",
-      "[2024-07-15 11:41:17,192: INFO: common: created directory at: output/model_evaluation]\n"
+      "[2024-07-15 20:03:04,522: INFO: common: yaml file: config\\config.yaml loaded successfully]\n",
+      "[2024-07-15 20:03:04,523: INFO: common: created directory at: output]\n",
+      "[2024-07-15 20:03:04,523: INFO: common: created directory at: output/model_evaluation]\n"
      ]
     },
     {
@@ -224,7 +224,7 @@
      "text": [
       "All model checkpoint layers were used when initializing TFDistilBertForSequenceClassification.\n",
       "\n",
-      "All the layers of TFDistilBertForSequenceClassification were initialized from the model checkpoint at output/finetuned_model.\n",
+      "All the layers of TFDistilBertForSequenceClassification were initialized from the model checkpoint at output/model_trainer/finetuned_model.\n",
       "If your task is similar to the task the model of the checkpoint was trained on, you can already use TFDistilBertForSequenceClassification for predictions without further training.\n"
      ]
     },
@@ -232,18 +232,18 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "[2024-07-15 11:41:19,179: INFO: 1191191246: Text: Pop star to start fashion company]\n",
-      "[2024-07-15 11:41:19,357: INFO: 1191191246: [[0.8871288  0.03015455 0.06201571 0.02070092]]]\n",
-      "[2024-07-15 11:41:19,357: INFO: 1191191246: Labels: entertainment]\n",
-      "[2024-07-15 11:41:19,357: INFO: 1191191246: Text: Revolutionary methods for discovering new materials]\n",
-      "[2024-07-15 11:41:19,458: INFO: 1191191246: [[0.09031415 0.36010823 0.19604594 0.35353172]]]\n",
-      "[2024-07-15 11:41:19,458: INFO: 1191191246: Labels: science/tech]\n",
-      "[2024-07-15 11:41:19,458: INFO: 1191191246: Text: Rebranded bank will target global growth]\n",
-      "[2024-07-15 11:41:19,557: INFO: 1191191246: [[0.00365722 0.01373794 0.97854096 0.00406382]]]\n",
-      "[2024-07-15 11:41:19,557: INFO: 1191191246: Labels: business]\n",
-      "[2024-07-15 11:41:19,557: INFO: 1191191246: Text: A new sustainable vaccination against Ebola developed.]\n",
-      "[2024-07-15 11:41:19,674: INFO: 1191191246: [[0.00118971 0.00141545 0.00420589 0.993189  ]]]\n",
-      "[2024-07-15 11:41:19,674: INFO: 1191191246: Labels: health]\n"
+      "[2024-07-15 20:03:06,958: INFO: 606419837: Text: Pop star to start fashion company]\n",
+      "[2024-07-15 20:03:07,200: INFO: 606419837: [[0.99231744 0.00198207 0.00207163 0.00362889]]]\n",
+      "[2024-07-15 20:03:07,200: INFO: 606419837: Predicted Label: entertainment]\n",
+      "[2024-07-15 20:03:07,200: INFO: 606419837: Text: Revolutionary methods for discovering new materials]\n",
+      "[2024-07-15 20:03:07,339: INFO: 606419837: [[0.00774623 0.79787713 0.1650533  0.02932338]]]\n",
+      "[2024-07-15 20:03:07,339: INFO: 606419837: Predicted Label: science/tech]\n",
+      "[2024-07-15 20:03:07,339: INFO: 606419837: Text: Rebranded bank will target global growth]\n",
+      "[2024-07-15 20:03:07,450: INFO: 606419837: [[0.00119259 0.01444341 0.97920144 0.00516252]]]\n",
+      "[2024-07-15 20:03:07,450: INFO: 606419837: Predicted Label: business]\n",
+      "[2024-07-15 20:03:07,450: INFO: 606419837: Text: A new sustainable vaccination against Ebola developed.]\n",
+      "[2024-07-15 20:03:07,576: INFO: 606419837: [[1.2019568e-03 9.2322734e-04 1.2796704e-03 9.9659508e-01]]]\n",
+      "[2024-07-15 20:03:07,577: INFO: 606419837: Predicted Label: health]\n"
      ]
     }
    ],
