--- a/notebook/01_data_ingestion.ipynb
+++ b/notebook/01_data_ingestion.ipynb
@@ -79,8 +79,7 @@
     "    y_train_data_path: Path \n",
     "    y_test_data_path: Path\n",
     "    X_val_data_path: Path\n",
-    "    y_val_data_path: Path \n",
-    "    raw_data_path: Path "
+    "    y_val_data_path: Path "
    ]
   },
   {
@@ -126,8 +125,7 @@
     "            y_train_data_path=config.y_train_data_path,\n",
     "            y_test_data_path=config.y_test_data_path,\n",
     "            X_val_data_path=config.X_val_data_path,\n",
-    "            y_val_data_path=config.y_val_data_path,\n",
-    "            raw_data_path=config.raw_data_path \n",
+    "            y_val_data_path=config.y_val_data_path\n",
     "        )\n",
     "\n",
     "        return data_ingestion_config"
@@ -188,8 +186,6 @@
     "            df_selected['TARGET'] = df_selected.apply(lambda x: encoded(x['CATEGORY']), axis=1)\n",
     "            os.makedirs(os.path.dirname(self.config.processed_data_path),exist_ok=True)\n",
     "            df_selected.to_csv(self.config.processed_data_path,index=False,header=True)   \n",
-    "            os.makedirs(os.path.dirname(self.config.raw_data_path),exist_ok=True)\n",
-    "            df_selected.to_csv(self.config.raw_data_path,index=False,header=True)         \n",
     "            \n",
     "            logger.info(\"Splitting the data into X and y\")\n",
     "            seed = 18\n",
@@ -201,6 +197,7 @@
     "            X_train, X_val, y_train, y_val = train_test_split(X_train, y_train, test_size=0.10, random_state=seed)\n",
     "            \n",
     "            logger.info(\"Saving the data\")\n",
+    "            os.makedirs(os.path.dirname(self.config.X_train_data_path),exist_ok=True)\n",
     "            X_train.to_csv(self.config.X_train_data_path,index=False,header=True)\n",
     "            X_test.to_csv(self.config.X_test_data_path,index=False,header=True)\n",
     "            y_train.to_csv(self.config.y_train_data_path,index=False,header=True)\n",
